Prevent schedule table overflowing

--- a/imports/ui/styles/main.scss
+++ b/imports/ui/styles/main.scss
@@ -747,6 +747,7 @@ input[type="text"]
       border: 2px solid black;
       border-radius: 5px;
 
+      overflow: auto;
       padding:2em;
 
 
